2006-08-13  Miguel de Icaza  <miguel@novell.com>

	* serial.c (get_bytes_in_buffer): Change the signature, we do not
	return any meaningful error other than -1.

2006-06-28  Zoltan Varga  <vargaz@gmail.com>

	* mph.h (MPH_INTERNAL): Only use this if HAVE_VISIBILITY_HIDDEN is
	defined since it is not supported on some archs with gcc.

2006-04-28  Wade Berrier <wberrier@novell.com>

	* serial.c: Add sys/filio.h for solaris for FIONREAD

2006-04-20  Geoff Norton  <gnorton@customerdna.com>

	* serial.c: Change TIOCINQ to FIONREAD to 
	fix the build on the *BSDs.

2006-04-19  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c: Added poll_serial () function, to poll
	outside the read_serial () functions; and get_bytes_in_buffer (), to
	get bytes in serialport buffers . Update some functions/enums
	used by System.IO.Port.SerialPort too (Changes aproved by Miguel:
	we will add tests in the managed side).
	
2006-03-22  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c: Add get_signal_code, get_signal, and set_signal
	functions to access serial signals. Also add a MonoSerialSignal
	enum, which is a copy of System.IO.Ports.SerialSignal.

Thu Mar 16 17:27:46 CET 2006 Paolo Molaro <lupus@ximian.com>

	* serial.c: removed useless serial.h file (it was also
	breaking the build).

2006-03-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c: Fix a pair of wrong or incomplete assignations
	in set_attributes.
	
2006-02-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.h: New file with serial port constants.
	* serial.c: Use the constants in serial.h instead of magic numbers.
	
2006-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-time.c: lutimes(2) only exists on some BSDs.  There's a configure
	  check for it now -- use it.

2005-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* map-icalls.h: Flush (add utimes_bad, lutimes, futimes).
	* sys-time.c: Add lutimes(2) and futimes(2) wrapper.

2005-12-27  Jonathan Pryor  <jonpryor@vt.edu>
